--- a/src/styles/partials/_mixins.scss
+++ b/src/styles/partials/_mixins.scss
@@ -32,3 +32,11 @@ p {
     margin-left: auto;
     margin-right: auto;
 }
+
+@mixin form-input {
+    background: transparent;
+    border: none;
+    border-bottom: 1px solid $white;
+    padding-top: 2vh;
+    padding-bottom: 1vh;
+}
