--- a/src/pages/ProjectsPage/ProjectsPage.scss
+++ b/src/pages/ProjectsPage/ProjectsPage.scss
@@ -2,3 +2,10 @@
 @use '../../styles/partials/global' as *;
 @use '../../styles/partials/mixins' as *;
 
+.projects-page {
+    background-color: $light-grey;
+    height: 100vh;
+    padding-top: 5vh;
+    padding-right: 3vw;
+    padding-left: 3vw;
+}
