--- a/src/components/ProjectsNav/ProjectsNav.scss
+++ b/src/components/ProjectsNav/ProjectsNav.scss
@@ -6,6 +6,7 @@
     border-bottom: 2px solid $dark-grey;
 
     &__list {
+        padding-left: 0;
         width: 70%;
         @include centered;
         display: flex;
