Create styling and structure for login. Create styling/structure for manage site.

--- a/src/pages/AdminPage/AdminPage.scss
+++ b/src/pages/AdminPage/AdminPage.scss
@@ -1,3 +1,9 @@
 @use '../../styles/partials/colors' as *;
 @use '../../styles/partials/global' as *;
 @use '../../styles/partials/mixins' as *;
+
+.admin-page {
+    background-color: $dark-grey;
+    padding-top: 13vh;
+    height: 100vh;
+}
