--- a/src/components/AdminLogin/AdminLogin.scss
+++ b/src/components/AdminLogin/AdminLogin.scss
@@ -1,3 +1,34 @@
 @use '../../styles/partials/colors' as *;
 @use '../../styles/partials/global' as *;
 @use '../../styles/partials/mixins' as *;
+
+.admin-login {
+    width: 90vw;
+    @include centered;
+
+    &__form {
+        margin-top: 3vh;
+        width: 30vw;
+
+        &-split {
+            display: flex;
+            flex-direction: row;
+            gap: 6vw;
+        }
+
+        &-input {
+            @include form-input;
+        }
+
+        &-label {
+            color: $white;
+            font-size: 1.3em;;
+        }
+
+        &-button {
+            @include button-send;
+            margin-top: 3vh;
+        }
+    }
+
+}
