--- a/src/components/ManageSite/ManageSite.scss
+++ b/src/components/ManageSite/ManageSite.scss
@@ -7,6 +7,7 @@
     @include centered;
 
     &__jobs {
+        margin-top: 4vh;
 
         &-title {
             @include admin-sub-titles;
@@ -26,6 +27,7 @@
     }
 
     &__employees {
+        margin-top: 8vh;
 
         &-title {
             @include admin-sub-titles;
