--- a/src/pages/AdminPage/AdminPage.scss
+++ b/src/pages/AdminPage/AdminPage.scss
@@ -6,4 +6,8 @@
     background-color: $dark-grey;
     padding-top: 13vh;
     height: 100vh;
+
+    &__sub-title {
+        @include admin-sub-titles;
+    }
 }
