--- a/src/styles/partials/_mixins.scss
+++ b/src/styles/partials/_mixins.scss
@@ -40,6 +40,7 @@ p {
     border-bottom: 1px solid $white;
     padding-top: 2vh;
     padding-bottom: 1vh;
+    color: $white;
 }
 
 @mixin h1-dark {
