--- a/src/components/NewJob/NewJob.scss
+++ b/src/components/NewJob/NewJob.scss
@@ -5,6 +5,13 @@
 .new-job {
     width: 90vw;
     @include centered;
+    position: relative;
+
+    &__back {
+        color: $white;
+        position: absolute;
+        right: 0;
+    }
 
     &__sub-title {
         @include admin-sub-titles;
